[gd_scene load_steps=10 format=3 uid="uid://blt5pbwjnsdek"]

[ext_resource type="Script" path="res://Scripts/PlayState/PlayStateSignals.gd" id="2_4l2q2"]
[ext_resource type="Script" path="res://Scripts/PlayState/chartHandler.gd" id="3_1ijkg"]
[ext_resource type="Script" path="res://Scripts/PlayState/inputHandler.gd" id="4_5xmji"]
[ext_resource type="Script" path="res://Scripts/PlayState/pauseHandler.gd" id="5_p1gj3"]
[ext_resource type="Script" path="res://Scripts/PlayState/conductor.gd" id="6_3sxgv"]
[ext_resource type="Script" path="res://Scripts/PlayState/stageHandler.gd" id="6_mghwf"]
[ext_resource type="Script" path="res://Scripts/PlayState/start.gd" id="7_muios"]
[ext_resource type="Script" path="res://Scripts/util.gd" id="8_ydm25"]
[ext_resource type="PackedScene" uid="uid://bjq3edcpdjqpw" path="res://Assets/Object Scenes/playstateUI.tscn" id="9_1dueu"]

[node name="MainScene" type="Node2D"]
position = Vector2(-28.698, -14.348)
scale = Vector2(1.03, 1.03)

[node name="Scripts" type="Node" parent="."]

[node name="PlayState" type="Node" parent="Scripts"]
script = ExtResource("2_4l2q2")

[node name="ChartHandler" type="Node" parent="Scripts/PlayState"]
script = ExtResource("3_1ijkg")

[node name="InputHandler" type="Node" parent="Scripts/PlayState"]
script = ExtResource("4_5xmji")

[node name="PauseHandler" type="Node" parent="Scripts/PlayState"]
script = ExtResource("5_p1gj3")

[node name="StageHandler" type="Node" parent="Scripts/PlayState"]
script = ExtResource("6_mghwf")

[node name="EventHandler" type="Node" parent="Scripts/PlayState"]

[node name="Conductor" type="Node" parent="Scripts"]
script = ExtResource("6_3sxgv")

[node name="Start" type="Node" parent="Scripts"]
script = ExtResource("7_muios")

[node name="Util" type="Node" parent="Scripts"]
script = ExtResource("8_ydm25")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(27.8621, 13.9301)
offset = Vector2(960, 540)

[node name="UILock" parent="." instance=ExtResource("9_1dueu")]

[connection signal="Beat" from="Scripts/PlayState" to="Scripts/PlayState/StageHandler" method="beatChanged"]
[connection signal="Initiate" from="Scripts/PlayState" to="Scripts/PlayState/ChartHandler" method="initiateChart"]
[connection signal="Pause" from="Scripts/PlayState" to="Scripts/PlayState/ChartHandler" method="handlePause"]
[connection signal="Pause" from="Scripts/PlayState" to="Scripts/PlayState/InputHandler" method="pause"]
[connection signal="Pause" from="Scripts/PlayState" to="Scripts/Conductor" method="pauseMusic"]
[connection signal="Start" from="Scripts/PlayState" to="Scripts/PlayState/ChartHandler" method="songBegan"]
[connection signal="Start" from="Scripts/PlayState" to="Scripts/PlayState/InputHandler" method="initiateInputs"]
[connection signal="Start" from="Scripts/PlayState" to="Scripts/PlayState/StageHandler" method="startSong"]
[connection signal="cleanupNoteRequest" from="Scripts/PlayState/ChartHandler" to="Scripts/PlayState/ChartHandler" method="cleanupNote"]
[connection signal="focusCamSignal" from="Scripts/PlayState/StageHandler" to="Scripts/PlayState/StageHandler" method="FocusCamera"]
[connection signal="noteEndedSignal" from="Scripts/PlayState/StageHandler" to="Scripts/PlayState/StageHandler" method="noteEnded"]
[connection signal="noteHitSignal" from="Scripts/PlayState/StageHandler" to="Scripts/PlayState/StageHandler" method="noteHit"]
[connection signal="zoomCamSignal" from="Scripts/PlayState/StageHandler" to="Scripts/PlayState/StageHandler" method="ZoomCamera"]
[connection signal="songBegan" from="Scripts/Conductor" to="Scripts/Conductor" method="songStarted"]
[connection signal="songRequested" from="Scripts/Conductor" to="Scripts/Conductor" method="_on_song_requested"]
